--- a/helpdesk-ticket-system/package.json
+++ b/helpdesk-ticket-system/package.json
@@ -7,10 +7,11 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "easybase-react": "^2.2.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
-    "react-scripts": "^1.1.5",
+    "react-scripts": "^4.0.3",
     "redux": "^4.1.0",
     "web-vitals": "^1.1.1"
   },
