--- a/helpdesk-ticket-system/package.json
+++ b/helpdesk-ticket-system/package.json
@@ -7,12 +7,17 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.1",
+    "@types/react": "^17.0.19",
+    "@types/react-dom": "^17.0.9",
     "easybase-react": "^2.2.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-scripts": "^4.0.3",
     "redux": "^4.1.0",
+    "typescript": "^4.3.5",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
